# personal-website

./: .env-template  .gitignore  Cargo.toml  README.md
assets/: index.html  jemdoc.css  script.js
src/: main.rs
